Fixed weird behaviour on Firefox when moving sections
Sections were not moved smoothly on Firefox, that was because of the
z-index transition time. It was set to 0s beucase it makes no sense to
set a transition to the z-index attribute, and that worked for all web
browsers I tested but Firefox.

I've just changed the 0s to 0.001s and that worked.

--- a/css/master.css
+++ b/css/master.css
@@ -28,20 +28,20 @@ section {
   width: 100%;
   height: 100%;
   text-align: center;
-  webkit-transition: all 1s;
-  transition: all 1s;
+  webkit-transition: all 1s, z-index 0.001s;
+  transition: all 1s, z-index 0.001s;
 }
 
 #index {
   background-color: #f6f6f6;
-  z-index: 4;
+  z-index: 8;
 }
 
 #about {
   background-color: #56c9b6;
   top: 100%;
   bottom: -100%;
-  z-index: 3;
+  z-index: 5;
 }
 
 #contact {
